# RECore

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  RECore.podspec  appveyor.yml  recore_config.h.in
builds/mac/: recore_config.h
include/: IRECompression.h  IREFileReadable.h  IREFileWritable.h  REAllocator.h  REBuffer.h  REBufferNoCopy.h  REBufferR.h  REBufferRW.h  REBufferReader.h  RECore.h  REDate.h  REFileManager.h  REInt24.h  RELZMA2.h  REList.h  RELog.h  REMap.h  REMutableBuffer.h  REMutableBufferRW.h  REMutableString.h  REMutex.h  REPoint2.h  REPtr.h  RERandomizer.h  REStaticString.h  REString.h  REStringBase.h  REStringList.h  RESwap.h  RETime.h  REUUIDv4.h  REVariant.h  REVariantList.h  REVariantMap.h  REWideString.h
recore2_mac_testapp/recore2_mac_testapp/: main.m  main.mm
recore2_mac_testapp/recore2_mac_testapp.xcodeproj/: project.pbxproj
src/: REAllocator.cpp  REBuffer.cpp  REBufferNoCopy.cpp  REBufferR.cpp  REBufferRW.cpp  REDate.cpp  REFileManager.cpp  REInt24.cpp  REJsonUtilsPrivate.cpp  REJsonUtilsPrivate.h  RELZMA2.cpp  RELog.cpp  REMutableBuffer.cpp  REMutableBufferRW.cpp  REMutableString.cpp  REMutex.cpp  RERandomizer.cpp  REStaticString.cpp  REString.cpp  REStringBase.cpp  REStringList.cpp  REStringUtilsPrivate.cpp  REStringUtilsPrivate.h  RETime.cpp  REUUIDv4.cpp  REVariant.cpp  REVariantList.cpp  REVariantMap.cpp  REWideString.cpp
test/: CMakeLists.txt  test_recore_allocator.cpp  test_recore_filepaths.cpp  test_recore_int24.cpp  test_recore_json.cpp  test_recore_lzma2.cpp  test_recore_rerandomizer.cpp  test_recore_strings.cpp  test_recore_stringsplit.cpp  test_recore_swap.cpp  test_recore_uuidv4.cpp
